# SertifiChain

./: README.md
sertifichain/: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  tsconfig.json
sertifichain/src/sertifichain_backend/: Cargo.toml  sertifichain_backend.did
sertifichain/src/sertifichain_backend/src/: lib.rs
sertifichain/src/sertifichain_frontend/: index.html  package.json  tailwind.config.ts  vite.config.js
sertifichain/src/sertifichain_frontend/src/: App.jsx  main.tsx  routeTree.gen.ts  styles.css
sertifichain/src/sertifichain_frontend/src/components/: divider.tsx  layout.tsx  navbar.tsx  pindah_tangan_header.tsx  popup_detail.tsx  riwayat_kepemilikan.tsx  sertif.tsx  sidebar.tsx  wrapper.tsx
sertifichain/src/sertifichain_frontend/src/components/pindah-tangan/: step1.tsx  step2.tsx  step3.tsx
sertifichain/src/sertifichain_frontend/src/context/: globalContext.tsx
sertifichain/src/sertifichain_frontend/src/hooks/: auth.ts
sertifichain/src/sertifichain_frontend/src/routes/: __root.tsx  about.tsx  feature.tsx  feature2.tsx  feature3.tsx  index.tsx  success.tsx
sertifichain/src/sertifichain_frontend/src/routes/cek-sertifikat/: index.tsx
sertifichain/src/sertifichain_frontend/src/routes/dashboard/: $nib.tsx  aktivitas.tsx  index.tsx  pindah-tangan.tsx  pindah_tangan.tsx
sertifichain/src/sertifichain_frontend/src/routes/home/: about.tsx  autentikasi.tsx  cek-sertifikat.tsx  ceksertif.tsx  feature.tsx  feature2.tsx  feature3.tsx  index.tsx
sertifichain/src/sertifichain_frontend/src/utils/: string.tsx
(+3 files in other folders)
