[package]
name = "sertifichain_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.11"
ic-cdk-macros = "0.6"
candid = "0.9.11" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
